@@ -51,7 +51,7 @@ static struct _elements_entry _elements[] = {
   {"capsfilter", GST_RANK_NONE, gst_capsfilter_get_type},
   {"fakesrc", GST_RANK_NONE, gst_fake_src_get_type},
   {"fakesink", GST_RANK_NONE, gst_fake_sink_get_type},
-#ifndef HAVE_WIN32
+#ifdef HAVE_SYS_SOCKET_H
   {"fdsrc", GST_RANK_NONE, gst_fdsrc_get_type},
 #endif
   {"filesrc", GST_RANK_NONE, gst_file_src_get_type},
