@@ -1,12 +1,15 @@
 plugin_LTLIBRARIES = libgstindexers.la
-
 # file index uses xml
 if GST_DISABLE_LOADSAVE
 GST_LOADSAVE_SRC =
 else
 GST_LOADSAVE_SRC = gstfileindex.c
 endif
+if HAVE_MMAP
 
+else
+GST_LOADSAVE_SRC =
+endif
 libgstindexers_la_SOURCES = gstindexers.c gstmemindex.c $(GST_LOADSAVE_SRC)
 libgstindexers_la_CFLAGS = $(GST_OBJ_CFLAGS)
 libgstindexers_la_LIBADD = $(GST_OBJ_LIBS)
